scribble/scribble-assertions/src/test/resources/good/extensions/annotations/ComplexMessageFlow2.scr
module good.extensions.annotations.ComplexMessageFlow2;


type <java> "java.lang.integer" from "rt.jar" as int;


// assrt-core version of good.extensions.annotations.ComplexMessageFlow
global protocol Proto1(role S, role B, role C, role D)
{
	ADD(x:int) from C to S;
	Add(x1:int) from S to B; @"(x1 = x)"
	
	ADD(x2:int) from C to B; @"(x2 = x)"
	
	Add(y:int) from C to D; 
	
	Add(x3:int) from B to D; @"(x3 = x1)"
	
	Add(y1:int) from D to S; @"(y1 = y)"
}
