scribble/scribble-assertions/src/test/resources/bad/extensions/annotations/Recursion2.scr
module bad.extensions.annotations.Recursion2;


type <java> "java.lang.integer" from "rt.jar" as int;

// assrt-core version of bad.extensions.annotations.Recursion
global protocol Proto1(role A, role B, role C)
{
//rec Loop {
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		RES(y1:int) from B to C; @"(y1 = y)"  // Artificial
	} or {
		RES(y:int) from A to B;
		RES(z1:int) from B to C; 
		//continue Loop;
		do Proto1(A, B, C);
		}
	//}
}